--- a/css/styles.css
+++ b/css/styles.css
@@ -174,6 +174,8 @@ body{
  .icon-advantages{
     background-color: rgba(245, 244, 250, 1) ;
     border-radius: 4px;
+    margin-left: auto;
+    margin-right: auto;
     
  }
 
