--- a/css/styles.css
+++ b/css/styles.css
@@ -172,6 +172,7 @@ body{
  }
 
  .icon-advantages{
+    display: inline;
     background-color: rgba(245, 244, 250, 1) ;
     border-radius: 4px;
     margin-left: auto;
