--- a/css/styles.css
+++ b/css/styles.css
@@ -175,8 +175,7 @@ body{
     display: inline;
     background-color: rgba(245, 244, 250, 1) ;
     border-radius: 4px;
-    margin-left: auto;
-    margin-right: auto;
+   background-position: 50% 50%;
     
  }
 
