--- a/css/styles.css
+++ b/css/styles.css
@@ -172,7 +172,7 @@ body{
  }
 
  .icon-advantages{
-    display: inline;
+    display: block;
    
     border-radius: 4px;
    background-position: 50% 50%;
