--- a/css/styles.css
+++ b/css/styles.css
@@ -162,7 +162,7 @@ body{
  }
 
  .advantages-main {
-    margin-top: 94px;
+   padding-top: 94px;
  }
 .we-doing, .our-advantages, .our-team  {
     display: flex;
@@ -210,7 +210,8 @@ body{
 }
 
  .we-doing-section{
-    margin-top: 94px;
+    padding-top: 94px;
+    padding-bottom: 94px;
  }
 
  .we-doing-item{
@@ -235,7 +236,6 @@ body{
 }
 
 .our-team-block {
-    margin-top:94px;
     background-color: #F5F4FA;
     padding-top: 94px;
     padding-bottom: 94px;
@@ -326,8 +326,8 @@ address {font-style: normal;}
 }
 
 .container-portfolio{
-   margin-bottom: 94px;
-   margin-top: 94px;
+   padding-bottom: 94px;
+   padding-top: 94px;
 }
 
 .portfolio-button-block {
