--- a/css/styles.css
+++ b/css/styles.css
@@ -175,6 +175,8 @@ body{
     display: block;
     width: 270px;
     height: 120px;
+    margin-left: auto;
+    margin-right: auto;
     background-color: rgba(245, 244, 250, 1) ;
     border-radius: 4px;
     background-position: 50% 50%;
