--- a/css/styles.css
+++ b/css/styles.css
@@ -177,6 +177,7 @@ body{
     height: 120px;
     margin-left: auto;
     margin-right: auto;
+    object-position: center;
     background-color: rgba(245, 244, 250, 1) ;
     border-radius: 4px;
     background-position: 50% 50%;
