--- a/css/styles.css
+++ b/css/styles.css
@@ -172,15 +172,12 @@ body{
  }
 
  .icon-advantages{
-    display: block;
+    display: flex;
     width: 270px;
     height: 120px;
-    margin-left: auto;
-    margin-right: auto;
-    object-position: center;
+    justify-content: center;
     background-color: rgba(245, 244, 250, 1) ;
     border-radius: 4px;
-    background-position: 50% 50%;
  }
 
 .our-advantages-item:first-child {
