--- a/css/styles.css
+++ b/css/styles.css
@@ -168,7 +168,12 @@ body{
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    border-radius: c;
+ }
+
+ .icon-box {
+     display: flex;
+     justify-content: center;
+     align-items: center;
  }
 
  .icon-advantages{
