--- a/css/styles.css
+++ b/css/styles.css
@@ -88,8 +88,8 @@ body{
 
 .site-nav-link {
     display: flex;
-    margin-top: 32px;
-    margin-bottom: 32px;
+    padding-top: 32px;
+    padding-bottom: 32px;
     
     font-weight: 500;
     color: var(--main-text-color);
@@ -166,65 +166,47 @@ body{
  }
 .we-doing, .our-advantages, .our-team  {
     display: flex;
-    justify-content: center;
     flex-wrap: wrap;
+    padding-left: 15px;
+    padding-right: 15px;
  }
 
- .icon-box {
+.icon-box {
      display: flex;
      justify-content: center;
      align-items: center;
- }
+}
 
- .icon-advantages{
+.icon-advantages{
     display: flex;
     width: 270px;
     height: 120px;
     justify-content: center;
     background-color: rgba(245, 244, 250, 1) ;
     border-radius: 4px;
- }
-
-.our-advantages-item:first-child {
-    margin-left: 15px;
 }
 
-.our-advantages-item:last-child {
-    margin-right: 15px;
-}
-
-.we-doing-item:first-child {
-    margin-left: 15px;
-}
-
-.we-doing-item:last-child {
-    margin-right: 15px;
-}
-
-.our-advantages-item:not(last-child) {
+.our-advantages-item:not(:last child) {
     margin-right: 30px;
 
- }
+}
 
 .our-advantages-item {
     width: 270px;
- }
-
- .we-doing{
-    margin-bottom: 0px;
 }
 
  .we-doing-section{
     padding-top: 94px;
     padding-bottom: 94px;
- }
+}
 
  .we-doing-item{
     margin-top: 50px;
- }
+}
  
-.we-doing-item:not(last-child) {
+.we-doing-item:not(:last-child){
     margin-right: 30px;
+    
 }
 
 .benefits-headline{
@@ -256,16 +238,8 @@ body{
       margin-top: 50px;
 }
 
-.our-team-item:not(last-child) {
+.our-team-item:not(:last-child) {
     margin-right: 30px;
-}
-
-.our-team-item:first-child {
-    margin-left: 15px;
-}
-
-.our-team-item:last-child {
-    margin-right: 15px;
 }
 
 .our-team-item {
@@ -342,7 +316,7 @@ address {font-style: normal;}
     justify-content: center;
 }
 
-.button-portfolio:not(last-child) {
+.button-maine-portfolio:not(:last-child) {
     margin-right: 8px;
 }
 
@@ -364,8 +338,6 @@ address {font-style: normal;}
 
 }
 
-
-
 .button-portfolio:hover, .button-portfolio:focus {
     background-color: var(--accent-color);
     color: var(--backround-color);
@@ -375,13 +347,12 @@ address {font-style: normal;}
     display: flex;
     flex-wrap: wrap;
     margin-top: 50px;
-    margin-right: 15px;
-    margin-left: 15px;
+    padding-right: 15px;
+    padding-left: 15px;
 }
 
 .portfolio-items-main {
-    border: 1px solid #EEEEEE;
-    width: calc((100% - 60px)/3);
+    outline:  1px solid #EEEEEE;
     margin-right: 30px;
     margin-bottom: 30px;
 }
