--- a/css/styles.css
+++ b/css/styles.css
@@ -178,7 +178,8 @@ body{
 }
 
 .icon-advantages{
-    display: flex;
+    display: inline;
+    
     width: 270px;
     height: 120px;
     justify-content: center;
