--- a/css/styles.css
+++ b/css/styles.css
@@ -172,13 +172,12 @@ body{
  }
 
 .icon-box {
-    display: inline;
+    display: flex;
     justify-content: center;
     align-items: center;
 }
 
 .icon-advantages{
-    
     width: 270px;
     height: 120px;
     justify-content: center;
