--- a/css/styles.css
+++ b/css/styles.css
@@ -172,21 +172,19 @@ body{
  }
 
 .icon-box {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+   
 }
 
 .icon-advantages{
     display: flex;
+    justify-content: center;
     width: 270px;
     height: 120px;
-    justify-content: center;
     background-color: rgba(245, 244, 250, 1) ;
     border-radius: 4px;
 }
 
-.our-advantages-item:not(:last child) {
+.our-advantages-item:not(:last-child) {
     margin-right: 30px;
 
 }
