--- a/css/styles.css
+++ b/css/styles.css
@@ -80,10 +80,14 @@ body{
  }
 
 .site-nav-item:not(:last-child) {
-    margin-right: 50px;
+    margin-right: 30px;
 }
 .site-nav-item:first-child {
-    margin-left: 331px;
+    margin-left: 305px;
+}
+
+.site-nav-item {
+    display: flex;
 }
 
 .site-nav-link {
