--- a/css/styles.css
+++ b/css/styles.css
@@ -88,6 +88,7 @@ body{
 
 .site-nav-item {
     display: flex;
+    align-items: center;
 }
 
 .site-nav-link {
@@ -100,8 +101,14 @@ body{
     letter-spacing: 0.02em; 
 }
 
+.icon-nav {
+    width: 16px;
+    height: 16px;
+}
+
 .contacts-nav-link {
     color: var(--second-text-color);
+    margin-left: 10px;
 
     font-weight: 500;
     letter-spacing: 0.02em;
