--- a/css/styles.css
+++ b/css/styles.css
@@ -191,20 +191,15 @@ body{
 
 .icon-box {
     display: flex;
-   
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     width: 270px;
     height: 120px;
     background-color: rgba(245, 244, 250, 1) ;
     border-radius: 4px;
    
 }
-
-icon-advantages {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
 
 .our-advantages-item:not(:last-child) {
     margin-right: 30px;
