--- a/css/styles.css
+++ b/css/styles.css
@@ -116,11 +116,12 @@ body{
     color: var(--accent-color)
 }
 
- .icon-nav:hover, .contacts-nav-link:hover,
- .icon-nav:focus, .contacts-nav-link:focus
- {
+ .icon-nav:hover, .icon-nav:focus {
+        fill: var(--accent-color);
+    }
+
+.contacts-nav-link:hover, .contacts-nav-link:focus {
     color: var(--accent-color);
-    fill: var(--accent-color)
 }
 
 
