--- a/css/styles.css
+++ b/css/styles.css
@@ -414,6 +414,13 @@ address {font-style: normal;}
     margin-bottom: 30px;
 }
 
+.portfolio-items-main:hover, .portfolio-items-main:focus {
+    box-shadow: 1 4px 6px 0 rgba(0, 0, 0, 0.16),
+    0 4px 4px 0 rgba(0, 0, 0, 0.06),
+    0 1px 1px 0 rgba(0, 0, 0, 0.12);
+}
+
+
 .portfolio-items-main:nth-child(3n) {
     margin-right: 0px;
 }
