--- a/css/styles.css
+++ b/css/styles.css
@@ -412,10 +412,11 @@ address {font-style: normal;}
     outline:  1px solid #EEEEEE;
     margin-right: 30px;
     margin-bottom: 30px;
+    cursor: pointer;
 }
 
 .portfolio-items-main:hover, .portfolio-items-main:focus {
-    box-shadow: 1 4px 6px 0 rgba(0, 0, 0, 0.16),
+    box-shadow: 0 4px 6px 0 rgba(0, 0, 0, 0.16),
     0 4px 4px 0 rgba(0, 0, 0, 0.06),
     0 1px 1px 0 rgba(0, 0, 0, 0.12);
 }
