--- a/css/styles.css
+++ b/css/styles.css
@@ -303,9 +303,10 @@ body{
     cursor: pointer;
     width: 44px;
     height: 44px;
+    cursor: pointer;
 }
 
-.icon-social-networks:not(:last-child) {
+.icon-social-networks-li:not(:last-child) {
     margin-right: 10px;
 }
 
