--- a/css/styles.css
+++ b/css/styles.css
@@ -334,7 +334,7 @@ body{
 
 .icon-companies:hover, .icon-companies:focus {
     outline:  1px solid var(--accent-color);
-    fill: var(--accent-color);
+    fill: var(--backround-color);
 }
 
 
