--- a/css/styles.css
+++ b/css/styles.css
@@ -303,13 +303,19 @@ body{
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
+   
+}
+
+.icon-s-n {
+    fill: #AFB1B8
     cursor: pointer;
     width: 44px;
     height: 44px;
     cursor: pointer;
 }
 
-.icon-social-networks:hover, .icon-social-networks:focus {
+
+.icon-s-n:hover, .icon-s-n:focus {
     background-color: var(--accent-color);
     border-radius: 50%;
 }
@@ -348,10 +354,6 @@ body{
     outline:  1px solid #AFB1B8;
     border-radius: 4px;
     cursor: pointer;
-}
-
-.icon-s-n {
-    fill: #AFB1B8
 }
 
 .icon-companie {
@@ -429,6 +431,9 @@ address {font-style: normal;}
 .button-portfolio:hover, .button-portfolio:focus {
     background-color: var(--accent-color);
     color: var(--backround-color);
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.12),
+    0 1px 2px 0 rgba(0, 0, 0, 0.08),
+    0 3px 1px 0 rgba(0, 0, 0, 0.1);
 }
 
 .portfolio-items-block {
