--- a/css/styles.css
+++ b/css/styles.css
@@ -120,7 +120,7 @@ body{
 
 
 
-.site-nav-link:hover, .site-nav-link:focus,
+.site-nav-link:hover, .site-nav-link:focus
 {
     color: var(--accent-color);
 }
