--- a/css/styles.css
+++ b/css/styles.css
@@ -318,8 +318,8 @@ body{
 }
 
 
-.icon-social-networks:hover .icon-s-n,
- .icon-social-networks:focus .icon-s-n {
+.icon-social-networks:hover,
+ .icon-social-networks:focus {
     background-color: var(--accent-color);
     border-radius: 50%;
     fill: var(--backround-color);
