--- a/css/styles.css
+++ b/css/styles.css
@@ -321,6 +321,7 @@ body{
  .icon-social-networks:focus {
     background-color: var(--accent-color);
     border-radius: 50%;
+    fill: var(--backround-color);
 }
 
 
