--- a/css/styles.css
+++ b/css/styles.css
@@ -113,17 +113,20 @@ body{
     flex-wrap: wrap;
     align-items: center;
     color: var(--second-text-color);
-    margin-left: 10px;
-
+    
     font-weight: 500;
     letter-spacing: 0.02em;
+}
+
+.margin-contacts-nav {
+    margin-left: 10px;
 }
 
 .icon-nav {
     fill: rgba(117, 117, 117, 1);
 }
 
-.contacts-nav-link:hover, .contacts-nav-link:focus {
+.icon-nav-hover:hover, .icon-nav-hover:focus {
     color: var(--accent-color);
     fill: var(--accent-color);
 }
@@ -506,7 +509,7 @@ address {font-style: normal;}
 }
 
 .portfolio-items-text {
-   margin: 20px 24px 20px 24px;
+  padding: 20px 24px 20px 24px;
 }
 
 .portfolio-items-name {
