--- a/css/styles.css
+++ b/css/styles.css
@@ -123,7 +123,7 @@ body{
 }
 
 .icon-nav {
-   color: currentColor;
+   color: rgba(175, 177, 184, 1);
 }
 
 .icon-nav-hover:hover, .icon-nav-hover:focus {
