--- a/css/styles.css
+++ b/css/styles.css
@@ -123,7 +123,7 @@ body{
 }
 
 .icon-nav {
-   color: rgba(175, 177, 184, 1);
+  fill: currentColor;
 }
 
 .icon-nav-hover:hover, .icon-nav-hover:focus {
@@ -325,7 +325,7 @@ body{
 }
 
 .icon-s-n {
-    color: currentColor;
+    fill: currentColor;
    }
 
 
@@ -373,7 +373,7 @@ body{
 }
 
 .icon-companie {
-   color:currentColor;
+   fill:currentColor;
 }
 
 address {font-style: normal;}
